--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   json_annotation: ^4.8.1
   dio: ^5.3.2
   flutter_riverpod: ^2.3.6
+  flutter_holo_date_picker: ^1.1.2+1
+  pdf: ^3.10.4
+  printing: ^5.11.0
 
 
 dev_dependencies:
